clusters/basecamp-0/ingress/traefik/traefik-gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik
spec:
  controllerName: traefik.io/gateway-controller
  description: Traefik Gateway API controller
