clusters/basecamp-0/ingress/traefik/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: ingress
  annotations:
    traefik.io/entrypoints: web,websecure
    cert-manager.io/cluster-issuer: letsencrypt-dev
spec:
  gatewayClassName: traefik
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All

  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.sigdep.cloud"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: ingress-gateway-tls
        namespace: ingress
    allowedRoutes:
      namespaces:
        from: All
